gccida/g1/print_spelling
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_spelling/src/c-typeck.c:5058:23: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
if ( spelling_base >= spelling_0 ) 
                      ^~~~~~~~~~
                      spelling
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_spelling/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_spelling/src/c-typeck.c:5093:9: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
while ( spelling_0 > v1 ); 
        ^~~~~~~~~~
        spelling
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_spelling/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_spelling/src/obj/c-typeck.o] Error 1
